// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Allow attaching multiple bits of data 1`] = `
AhoCorasick {
  "trie": Trie {
    "data": [],
    "fail": null,
    "is_word": null,
    "next": {
      "f": Trie {
        "data": [],
        "fail": null,
        "is_word": null,
        "next": {
          "o": Trie {
            "data": [],
            "fail": null,
            "is_word": null,
            "next": {
              "o": Trie {
                "data": [
                  "data1",
                  "data2",
                ],
                "fail": null,
                "is_word": true,
                "next": {},
                "value": "foo",
              },
            },
            "value": "fo",
          },
        },
        "value": "f",
      },
    },
    "value": null,
  },
}
`;

exports[`Allow attaching multiple bits of data 2`] = `
{
  "count": {
    "foo": 1,
  },
  "data": {
    "foo": [
      "data1",
      "data2",
    ],
  },
  "matches": {
    "foo": [
      0,
    ],
  },
  "positions": {
    "0": [
      "foo",
    ],
  },
}
`;

exports[`Match every 1`] = `
AhoCorasick {
  "trie": Trie {
    "data": [],
    "fail": null,
    "is_word": null,
    "next": {
      "f": Trie {
        "data": [],
        "fail": null,
        "is_word": null,
        "next": {
          "o": Trie {
            "data": [],
            "fail": null,
            "is_word": null,
            "next": {
              "o": Trie {
                "data": [
                  undefined,
                ],
                "fail": null,
                "is_word": true,
                "next": {
                  " ": Trie {
                    "data": [],
                    "fail": null,
                    "is_word": null,
                    "next": {
                      "b": Trie {
                        "data": [],
                        "fail": null,
                        "is_word": null,
                        "next": {
                          "a": Trie {
                            "data": [],
                            "fail": null,
                            "is_word": null,
                            "next": {
                              "r": Trie {
                                "data": [
                                  undefined,
                                ],
                                "fail": null,
                                "is_word": true,
                                "next": {},
                                "value": "foo bar",
                              },
                            },
                            "value": "foo ba",
                          },
                        },
                        "value": "foo b",
                      },
                    },
                    "value": "foo ",
                  },
                },
                "value": "foo",
              },
            },
            "value": "fo",
          },
        },
        "value": "f",
      },
    },
    "value": null,
  },
}
`;

exports[`Match every 2`] = `
{
  "count": {
    "foo": 1,
  },
  "data": {
    "foo": [
      undefined,
    ],
  },
  "matches": {
    "foo": [
      0,
    ],
  },
  "positions": {
    "0": [
      "foo",
    ],
  },
}
`;

exports[`Match every 3`] = `
{
  "count": {
    "foo": 1,
    "foo bar": 1,
  },
  "data": {
    "foo": [
      undefined,
    ],
    "foo bar": [
      undefined,
    ],
  },
  "matches": {
    "foo": [
      0,
    ],
    "foo bar": [
      0,
    ],
  },
  "positions": {
    "0": [
      "foo",
      "foo bar",
    ],
  },
}
`;

exports[`Multiple matches 1`] = `
AhoCorasick {
  "trie": Trie {
    "data": [],
    "fail": null,
    "is_word": null,
    "next": {
      "h": Trie {
        "data": [],
        "fail": null,
        "is_word": null,
        "next": {
          "e": Trie {
            "data": [
              {
                "word": "he",
              },
            ],
            "fail": null,
            "is_word": true,
            "next": {
              "r": Trie {
                "data": [
                  {
                    "word": "her",
                  },
                ],
                "fail": null,
                "is_word": true,
                "next": {},
                "value": "her",
              },
            },
            "value": "he",
          },
        },
        "value": "h",
      },
      "s": Trie {
        "data": [],
        "fail": null,
        "is_word": null,
        "next": {
          "a": Trie {
            "data": [],
            "fail": null,
            "is_word": null,
            "next": {
              "y": Trie {
                "data": [
                  {
                    "word": "say",
                  },
                ],
                "fail": null,
                "is_word": true,
                "next": {},
                "value": "say",
              },
            },
            "value": "sa",
          },
          "h": Trie {
            "data": [],
            "fail": Trie {
              "data": [],
              "fail": null,
              "is_word": null,
              "next": {
                "e": Trie {
                  "data": [
                    {
                      "word": "he",
                    },
                  ],
                  "fail": null,
                  "is_word": true,
                  "next": {
                    "r": Trie {
                      "data": [
                        {
                          "word": "her",
                        },
                      ],
                      "fail": null,
                      "is_word": true,
                      "next": {},
                      "value": "her",
                    },
                  },
                  "value": "he",
                },
              },
              "value": "h",
            },
            "is_word": null,
            "next": {
              "e": Trie {
                "data": [
                  {
                    "word": "she",
                  },
                ],
                "fail": Trie {
                  "data": [
                    {
                      "word": "he",
                    },
                  ],
                  "fail": null,
                  "is_word": true,
                  "next": {
                    "r": Trie {
                      "data": [
                        {
                          "word": "her",
                        },
                      ],
                      "fail": null,
                      "is_word": true,
                      "next": {},
                      "value": "her",
                    },
                  },
                  "value": "he",
                },
                "is_word": true,
                "next": {},
                "value": "she",
              },
              "r": Trie {
                "data": [
                  {
                    "word": "shr",
                  },
                ],
                "fail": null,
                "is_word": true,
                "next": {},
                "value": "shr",
              },
            },
            "value": "sh",
          },
        },
        "value": "s",
      },
    },
    "value": null,
  },
}
`;

exports[`Multiple matches 2`] = `
{
  "count": {
    "he": 1,
    "her": 1,
    "she": 1,
  },
  "data": {
    "he": [
      {
        "word": "he",
      },
    ],
    "her": [
      {
        "word": "her",
      },
    ],
    "she": [
      {
        "word": "she",
      },
    ],
  },
  "matches": {
    "he": [
      3,
    ],
    "her": [
      3,
    ],
    "she": [
      2,
    ],
  },
  "positions": {
    "2": [
      "she",
    ],
    "3": [
      "he",
      "her",
    ],
  },
}
`;

exports[`Picks out multiple words 1`] = `
AhoCorasick {
  "trie": Trie {
    "data": [],
    "fail": null,
    "is_word": null,
    "next": {
      "b": Trie {
        "data": [],
        "fail": null,
        "is_word": null,
        "next": {
          "o": Trie {
            "data": [],
            "fail": null,
            "is_word": null,
            "next": {
              "o": Trie {
                "data": [],
                "fail": null,
                "is_word": null,
                "next": {
                  "t": Trie {
                    "data": [
                      undefined,
                    ],
                    "fail": null,
                    "is_word": true,
                    "next": {},
                    "value": "boot",
                  },
                },
                "value": "boo",
              },
            },
            "value": "bo",
          },
        },
        "value": "b",
      },
      "h": Trie {
        "data": [],
        "fail": null,
        "is_word": null,
        "next": {
          "e": Trie {
            "data": [],
            "fail": null,
            "is_word": null,
            "next": {
              "r": Trie {
                "data": [],
                "fail": Trie {
                  "data": [],
                  "fail": null,
                  "is_word": null,
                  "next": {
                    "e": Trie {
                      "data": [],
                      "fail": null,
                      "is_word": null,
                      "next": {
                        "c": Trie {
                          "data": [],
                          "fail": null,
                          "is_word": null,
                          "next": {
                            "e": Trie {
                              "data": [],
                              "fail": null,
                              "is_word": null,
                              "next": {
                                "i": Trie {
                                  "data": [],
                                  "fail": Trie {
                                    "data": [],
                                    "fail": null,
                                    "is_word": null,
                                    "next": {
                                      "v": Trie {
                                        "data": [],
                                        "fail": null,
                                        "is_word": null,
                                        "next": {
                                          "i": Trie {
                                            "data": [
                                              undefined,
                                            ],
                                            "fail": [Circular],
                                            "is_word": true,
                                            "next": {},
                                            "value": "ivi",
                                          },
                                        },
                                        "value": "iv",
                                      },
                                    },
                                    "value": "i",
                                  },
                                  "is_word": null,
                                  "next": {
                                    "v": Trie {
                                      "data": [],
                                      "fail": Trie {
                                        "data": [],
                                        "fail": null,
                                        "is_word": null,
                                        "next": {
                                          "i": Trie {
                                            "data": [
                                              undefined,
                                            ],
                                            "fail": Trie {
                                              "data": [],
                                              "fail": null,
                                              "is_word": null,
                                              "next": {
                                                "v": [Circular],
                                              },
                                              "value": "i",
                                            },
                                            "is_word": true,
                                            "next": {},
                                            "value": "ivi",
                                          },
                                        },
                                        "value": "iv",
                                      },
                                      "is_word": null,
                                      "next": {
                                        "i": Trie {
                                          "data": [],
                                          "fail": Trie {
                                            "data": [
                                              undefined,
                                            ],
                                            "fail": Trie {
                                              "data": [],
                                              "fail": null,
                                              "is_word": null,
                                              "next": {
                                                "v": Trie {
                                                  "data": [],
                                                  "fail": null,
                                                  "is_word": null,
                                                  "next": {
                                                    "i": [Circular],
                                                  },
                                                  "value": "iv",
                                                },
                                              },
                                              "value": "i",
                                            },
                                            "is_word": true,
                                            "next": {},
                                            "value": "ivi",
                                          },
                                          "is_word": null,
                                          "next": {
                                            "n": Trie {
                                              "data": [],
                                              "fail": null,
                                              "is_word": null,
                                              "next": {
                                                "g": Trie {
                                                  "data": [],
                                                  "fail": null,
                                                  "is_word": null,
                                                  "next": {
                                                    "s": Trie {
                                                      "data": [
                                                        undefined,
                                                      ],
                                                      "fail": null,
                                                      "is_word": true,
                                                      "next": {},
                                                      "value": "receivings",
                                                    },
                                                  },
                                                  "value": "receiving",
                                                },
                                              },
                                              "value": "receivin",
                                            },
                                          },
                                          "value": "receivi",
                                        },
                                      },
                                      "value": "receiv",
                                    },
                                  },
                                  "value": "recei",
                                },
                              },
                              "value": "rece",
                            },
                          },
                          "value": "rec",
                        },
                      },
                      "value": "re",
                    },
                  },
                  "value": "r",
                },
                "is_word": null,
                "next": {
                  "e": Trie {
                    "data": [
                      undefined,
                    ],
                    "fail": Trie {
                      "data": [],
                      "fail": null,
                      "is_word": null,
                      "next": {
                        "c": Trie {
                          "data": [],
                          "fail": null,
                          "is_word": null,
                          "next": {
                            "e": Trie {
                              "data": [],
                              "fail": null,
                              "is_word": null,
                              "next": {
                                "i": Trie {
                                  "data": [],
                                  "fail": Trie {
                                    "data": [],
                                    "fail": null,
                                    "is_word": null,
                                    "next": {
                                      "v": Trie {
                                        "data": [],
                                        "fail": null,
                                        "is_word": null,
                                        "next": {
                                          "i": Trie {
                                            "data": [
                                              undefined,
                                            ],
                                            "fail": [Circular],
                                            "is_word": true,
                                            "next": {},
                                            "value": "ivi",
                                          },
                                        },
                                        "value": "iv",
                                      },
                                    },
                                    "value": "i",
                                  },
                                  "is_word": null,
                                  "next": {
                                    "v": Trie {
                                      "data": [],
                                      "fail": Trie {
                                        "data": [],
                                        "fail": null,
                                        "is_word": null,
                                        "next": {
                                          "i": Trie {
                                            "data": [
                                              undefined,
                                            ],
                                            "fail": Trie {
                                              "data": [],
                                              "fail": null,
                                              "is_word": null,
                                              "next": {
                                                "v": [Circular],
                                              },
                                              "value": "i",
                                            },
                                            "is_word": true,
                                            "next": {},
                                            "value": "ivi",
                                          },
                                        },
                                        "value": "iv",
                                      },
                                      "is_word": null,
                                      "next": {
                                        "i": Trie {
                                          "data": [],
                                          "fail": Trie {
                                            "data": [
                                              undefined,
                                            ],
                                            "fail": Trie {
                                              "data": [],
                                              "fail": null,
                                              "is_word": null,
                                              "next": {
                                                "v": Trie {
                                                  "data": [],
                                                  "fail": null,
                                                  "is_word": null,
                                                  "next": {
                                                    "i": [Circular],
                                                  },
                                                  "value": "iv",
                                                },
                                              },
                                              "value": "i",
                                            },
                                            "is_word": true,
                                            "next": {},
                                            "value": "ivi",
                                          },
                                          "is_word": null,
                                          "next": {
                                            "n": Trie {
                                              "data": [],
                                              "fail": null,
                                              "is_word": null,
                                              "next": {
                                                "g": Trie {
                                                  "data": [],
                                                  "fail": null,
                                                  "is_word": null,
                                                  "next": {
                                                    "s": Trie {
                                                      "data": [
                                                        undefined,
                                                      ],
                                                      "fail": null,
                                                      "is_word": true,
                                                      "next": {},
                                                      "value": "receivings",
                                                    },
                                                  },
                                                  "value": "receiving",
                                                },
                                              },
                                              "value": "receivin",
                                            },
                                          },
                                          "value": "receivi",
                                        },
                                      },
                                      "value": "receiv",
                                    },
                                  },
                                  "value": "recei",
                                },
                              },
                              "value": "rece",
                            },
                          },
                          "value": "rec",
                        },
                      },
                      "value": "re",
                    },
                    "is_word": true,
                    "next": {},
                    "value": "here",
                  },
                },
                "value": "her",
              },
            },
            "value": "he",
          },
        },
        "value": "h",
      },
      "i": Trie {
        "data": [],
        "fail": null,
        "is_word": null,
        "next": {
          "v": Trie {
            "data": [],
            "fail": null,
            "is_word": null,
            "next": {
              "i": Trie {
                "data": [
                  undefined,
                ],
                "fail": [Circular],
                "is_word": true,
                "next": {},
                "value": "ivi",
              },
            },
            "value": "iv",
          },
        },
        "value": "i",
      },
      "l": Trie {
        "data": [],
        "fail": null,
        "is_word": null,
        "next": {
          "i": Trie {
            "data": [],
            "fail": Trie {
              "data": [],
              "fail": null,
              "is_word": null,
              "next": {
                "v": Trie {
                  "data": [],
                  "fail": null,
                  "is_word": null,
                  "next": {
                    "i": Trie {
                      "data": [
                        undefined,
                      ],
                      "fail": [Circular],
                      "is_word": true,
                      "next": {},
                      "value": "ivi",
                    },
                  },
                  "value": "iv",
                },
              },
              "value": "i",
            },
            "is_word": null,
            "next": {
              "t": Trie {
                "data": [],
                "fail": null,
                "is_word": null,
                "next": {
                  "t": Trie {
                    "data": [],
                    "fail": null,
                    "is_word": null,
                    "next": {
                      "l": Trie {
                        "data": [],
                        "fail": [Circular],
                        "is_word": null,
                        "next": {
                          "e": Trie {
                            "data": [],
                            "fail": null,
                            "is_word": null,
                            "next": {
                              " ": Trie {
                                "data": [],
                                "fail": null,
                                "is_word": null,
                                "next": {
                                  "b": Trie {
                                    "data": [],
                                    "fail": Trie {
                                      "data": [],
                                      "fail": null,
                                      "is_word": null,
                                      "next": {
                                        "o": Trie {
                                          "data": [],
                                          "fail": null,
                                          "is_word": null,
                                          "next": {
                                            "o": Trie {
                                              "data": [],
                                              "fail": null,
                                              "is_word": null,
                                              "next": {
                                                "t": Trie {
                                                  "data": [
                                                    undefined,
                                                  ],
                                                  "fail": null,
                                                  "is_word": true,
                                                  "next": {},
                                                  "value": "boot",
                                                },
                                              },
                                              "value": "boo",
                                            },
                                          },
                                          "value": "bo",
                                        },
                                      },
                                      "value": "b",
                                    },
                                    "is_word": null,
                                    "next": {
                                      "i": Trie {
                                        "data": [],
                                        "fail": Trie {
                                          "data": [],
                                          "fail": null,
                                          "is_word": null,
                                          "next": {
                                            "v": Trie {
                                              "data": [],
                                              "fail": null,
                                              "is_word": null,
                                              "next": {
                                                "i": Trie {
                                                  "data": [
                                                    undefined,
                                                  ],
                                                  "fail": [Circular],
                                                  "is_word": true,
                                                  "next": {},
                                                  "value": "ivi",
                                                },
                                              },
                                              "value": "iv",
                                            },
                                          },
                                          "value": "i",
                                        },
                                        "is_word": null,
                                        "next": {
                                          "t": Trie {
                                            "data": [],
                                            "fail": null,
                                            "is_word": null,
                                            "next": {
                                              " ": Trie {
                                                "data": [],
                                                "fail": null,
                                                "is_word": null,
                                                "next": {
                                                  "o": Trie {
                                                    "data": [],
                                                    "fail": null,
                                                    "is_word": null,
                                                    "next": {
                                                      "f": Trie {
                                                        "data": [
                                                          undefined,
                                                        ],
                                                        "fail": null,
                                                        "is_word": true,
                                                        "next": {},
                                                        "value": "little bit of",
                                                      },
                                                    },
                                                    "value": "little bit o",
                                                  },
                                                },
                                                "value": "little bit ",
                                              },
                                            },
                                            "value": "little bit",
                                          },
                                        },
                                        "value": "little bi",
                                      },
                                    },
                                    "value": "little b",
                                  },
                                },
                                "value": "little ",
                              },
                            },
                            "value": "little",
                          },
                        },
                        "value": "littl",
                      },
                    },
                    "value": "litt",
                  },
                },
                "value": "lit",
              },
            },
            "value": "li",
          },
        },
        "value": "l",
      },
      "r": Trie {
        "data": [],
        "fail": null,
        "is_word": null,
        "next": {
          "e": Trie {
            "data": [],
            "fail": null,
            "is_word": null,
            "next": {
              "c": Trie {
                "data": [],
                "fail": null,
                "is_word": null,
                "next": {
                  "e": Trie {
                    "data": [],
                    "fail": null,
                    "is_word": null,
                    "next": {
                      "i": Trie {
                        "data": [],
                        "fail": Trie {
                          "data": [],
                          "fail": null,
                          "is_word": null,
                          "next": {
                            "v": Trie {
                              "data": [],
                              "fail": null,
                              "is_word": null,
                              "next": {
                                "i": Trie {
                                  "data": [
                                    undefined,
                                  ],
                                  "fail": [Circular],
                                  "is_word": true,
                                  "next": {},
                                  "value": "ivi",
                                },
                              },
                              "value": "iv",
                            },
                          },
                          "value": "i",
                        },
                        "is_word": null,
                        "next": {
                          "v": Trie {
                            "data": [],
                            "fail": Trie {
                              "data": [],
                              "fail": null,
                              "is_word": null,
                              "next": {
                                "i": Trie {
                                  "data": [
                                    undefined,
                                  ],
                                  "fail": Trie {
                                    "data": [],
                                    "fail": null,
                                    "is_word": null,
                                    "next": {
                                      "v": [Circular],
                                    },
                                    "value": "i",
                                  },
                                  "is_word": true,
                                  "next": {},
                                  "value": "ivi",
                                },
                              },
                              "value": "iv",
                            },
                            "is_word": null,
                            "next": {
                              "i": Trie {
                                "data": [],
                                "fail": Trie {
                                  "data": [
                                    undefined,
                                  ],
                                  "fail": Trie {
                                    "data": [],
                                    "fail": null,
                                    "is_word": null,
                                    "next": {
                                      "v": Trie {
                                        "data": [],
                                        "fail": null,
                                        "is_word": null,
                                        "next": {
                                          "i": [Circular],
                                        },
                                        "value": "iv",
                                      },
                                    },
                                    "value": "i",
                                  },
                                  "is_word": true,
                                  "next": {},
                                  "value": "ivi",
                                },
                                "is_word": null,
                                "next": {
                                  "n": Trie {
                                    "data": [],
                                    "fail": null,
                                    "is_word": null,
                                    "next": {
                                      "g": Trie {
                                        "data": [],
                                        "fail": null,
                                        "is_word": null,
                                        "next": {
                                          "s": Trie {
                                            "data": [
                                              undefined,
                                            ],
                                            "fail": null,
                                            "is_word": true,
                                            "next": {},
                                            "value": "receivings",
                                          },
                                        },
                                        "value": "receiving",
                                      },
                                    },
                                    "value": "receivin",
                                  },
                                },
                                "value": "receivi",
                              },
                            },
                            "value": "receiv",
                          },
                        },
                        "value": "recei",
                      },
                    },
                    "value": "rece",
                  },
                },
                "value": "rec",
              },
            },
            "value": "re",
          },
        },
        "value": "r",
      },
    },
    "value": null,
  },
}
`;

exports[`Picks out multiple words 2`] = `
{
  "count": {
    "boot": 1,
    "here": 1,
    "ivi": 1,
    "little bit of": 1,
  },
  "data": {
    "boot": [
      undefined,
    ],
    "here": [
      undefined,
    ],
    "ivi": [
      undefined,
    ],
    "little bit of": [
      undefined,
    ],
  },
  "matches": {
    "boot": [
      147,
    ],
    "here": [
      0,
    ],
    "ivi": [
      105,
    ],
    "little bit of": [
      10,
    ],
  },
  "positions": {
    "0": [
      "here",
    ],
    "10": [
      "little bit of",
    ],
    "105": [
      "ivi",
    ],
    "147": [
      "boot",
    ],
  },
}
`;

exports[`Test simple 1`] = `
AhoCorasick {
  "trie": Trie {
    "data": [],
    "fail": null,
    "is_word": null,
    "next": {
      "a": Trie {
        "data": [],
        "fail": null,
        "is_word": null,
        "next": {
          "b": Trie {
            "data": [
              {
                "word": "ab",
              },
            ],
            "fail": Trie {
              "data": [],
              "fail": null,
              "is_word": null,
              "next": {
                "c": Trie {
                  "data": [],
                  "fail": Trie {
                    "data": [],
                    "fail": null,
                    "is_word": null,
                    "next": {
                      "a": Trie {
                        "data": [],
                        "fail": [Circular],
                        "is_word": null,
                        "next": {
                          "a": Trie {
                            "data": [
                              {
                                "word": "caa",
                              },
                            ],
                            "fail": [Circular],
                            "is_word": true,
                            "next": {},
                            "value": "caa",
                          },
                        },
                        "value": "ca",
                      },
                    },
                    "value": "c",
                  },
                  "is_word": null,
                  "next": {
                    "r": Trie {
                      "data": [
                        {
                          "word": "bcr",
                        },
                      ],
                      "fail": null,
                      "is_word": true,
                      "next": {},
                      "value": "bcr",
                    },
                  },
                  "value": "bc",
                },
              },
              "value": "b",
            },
            "is_word": true,
            "next": {},
            "value": "ab",
          },
        },
        "value": "a",
      },
      "b": Trie {
        "data": [],
        "fail": null,
        "is_word": null,
        "next": {
          "c": Trie {
            "data": [],
            "fail": Trie {
              "data": [],
              "fail": null,
              "is_word": null,
              "next": {
                "a": Trie {
                  "data": [],
                  "fail": Trie {
                    "data": [],
                    "fail": null,
                    "is_word": null,
                    "next": {
                      "b": Trie {
                        "data": [
                          {
                            "word": "ab",
                          },
                        ],
                        "fail": [Circular],
                        "is_word": true,
                        "next": {},
                        "value": "ab",
                      },
                    },
                    "value": "a",
                  },
                  "is_word": null,
                  "next": {
                    "a": Trie {
                      "data": [
                        {
                          "word": "caa",
                        },
                      ],
                      "fail": Trie {
                        "data": [],
                        "fail": null,
                        "is_word": null,
                        "next": {
                          "b": Trie {
                            "data": [
                              {
                                "word": "ab",
                              },
                            ],
                            "fail": [Circular],
                            "is_word": true,
                            "next": {},
                            "value": "ab",
                          },
                        },
                        "value": "a",
                      },
                      "is_word": true,
                      "next": {},
                      "value": "caa",
                    },
                  },
                  "value": "ca",
                },
              },
              "value": "c",
            },
            "is_word": null,
            "next": {
              "r": Trie {
                "data": [
                  {
                    "word": "bcr",
                  },
                ],
                "fail": null,
                "is_word": true,
                "next": {},
                "value": "bcr",
              },
            },
            "value": "bc",
          },
        },
        "value": "b",
      },
      "c": Trie {
        "data": [],
        "fail": null,
        "is_word": null,
        "next": {
          "a": Trie {
            "data": [],
            "fail": Trie {
              "data": [],
              "fail": null,
              "is_word": null,
              "next": {
                "b": Trie {
                  "data": [
                    {
                      "word": "ab",
                    },
                  ],
                  "fail": Trie {
                    "data": [],
                    "fail": null,
                    "is_word": null,
                    "next": {
                      "c": Trie {
                        "data": [],
                        "fail": [Circular],
                        "is_word": null,
                        "next": {
                          "r": Trie {
                            "data": [
                              {
                                "word": "bcr",
                              },
                            ],
                            "fail": null,
                            "is_word": true,
                            "next": {},
                            "value": "bcr",
                          },
                        },
                        "value": "bc",
                      },
                    },
                    "value": "b",
                  },
                  "is_word": true,
                  "next": {},
                  "value": "ab",
                },
              },
              "value": "a",
            },
            "is_word": null,
            "next": {
              "a": Trie {
                "data": [
                  {
                    "word": "caa",
                  },
                ],
                "fail": Trie {
                  "data": [],
                  "fail": null,
                  "is_word": null,
                  "next": {
                    "b": Trie {
                      "data": [
                        {
                          "word": "ab",
                        },
                      ],
                      "fail": Trie {
                        "data": [],
                        "fail": null,
                        "is_word": null,
                        "next": {
                          "c": Trie {
                            "data": [],
                            "fail": [Circular],
                            "is_word": null,
                            "next": {
                              "r": Trie {
                                "data": [
                                  {
                                    "word": "bcr",
                                  },
                                ],
                                "fail": null,
                                "is_word": true,
                                "next": {},
                                "value": "bcr",
                              },
                            },
                            "value": "bc",
                          },
                        },
                        "value": "b",
                      },
                      "is_word": true,
                      "next": {},
                      "value": "ab",
                    },
                  },
                  "value": "a",
                },
                "is_word": true,
                "next": {},
                "value": "caa",
              },
            },
            "value": "ca",
          },
        },
        "value": "c",
      },
    },
    "value": null,
  },
}
`;

exports[`Test simple 2`] = `
{
  "count": {
    "ab": 1,
  },
  "data": {
    "ab": [
      {
        "word": "ab",
      },
    ],
  },
  "matches": {
    "ab": [
      2,
    ],
  },
  "positions": {
    "2": [
      "ab",
    ],
  },
}
`;

exports[`Test simple 3`] = `
{
  "count": {
    "caa": 1,
  },
  "data": {
    "caa": [
      {
        "word": "caa",
      },
    ],
  },
  "matches": {
    "caa": [
      1,
    ],
  },
  "positions": {
    "1": [
      "caa",
    ],
  },
}
`;
